--- a/src/components/BookListItem/BookListItem.module.css
+++ b/src/components/BookListItem/BookListItem.module.css
@@ -1,10 +1,17 @@
 .item {
-  text-align: start;
-}
-.thumb {
   display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  text-align: start;
+  &:not(:last-child) {
+    margin-bottom: 16px;
+  }
+}
+
+.thumb {
+  /* display: flex;
   align-items: center;
-  flex-direction: wrap;
+  flex-direction: wrap; */
 }
 .title {
   margin-right: auto;
@@ -23,6 +30,10 @@
   max-height: 20px;
 }
 
-.btn {
+.btnWrapper {
   /* max-width: 100px; */
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  flex-basis: 170px;
 }
