--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -1,3 +1,19 @@
+.form {
+  margin-bottom: 32px;
+}
+.title {
+  width: 100%;
+  margin-bottom: 16px;
+}
+
+.thumb {
+  display: flex;
+  gap: 20px;
+}
+
+.label {
+  width: 100%;
+}
 .input {
-  min-width: 300px;
+  width: 100%;
 }
