--- a/src/components/BookListItem/BookListItem.module.css
+++ b/src/components/BookListItem/BookListItem.module.css
@@ -6,6 +6,9 @@
   &:not(:last-child) {
     margin-bottom: 16px;
   }
+  &:nth-child(odd) {
+    background-color: #f7f7f7;
+  }
 }
 
 .thumb {
@@ -31,9 +34,13 @@
 }
 
 .btnWrapper {
-  /* max-width: 100px; */
   display: flex;
   justify-content: space-between;
   align-items: start;
-  flex-basis: 170px;
+  flex-basis: 180px;
+  flex-shrink: 0;
+}
+.btnEdit {
+  display: block;
+  min-width: 100px;
 }
